--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,4 +30,4 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       
     - name: Publish
-      run: dotnet publish -c Release --no-build
+      run: dotnet publish -c Release -r linux-x64 --no-build
