--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,3 +31,6 @@ jobs:
       
     - name: Publish
       run: dotnet publish -c Release --no-restore -o ./publish/LambdaHelloWorld
+      
+    - name: Archive project
+      run: zip -j ./publish/LambdaHelloWorld.zip ./publish/LambdaHelloWorld
