--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,15 +1,12 @@
 name: .NET
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+    - '*'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,13 +15,25 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 6.0.101
         
     - name: Restore dependencies
       run: dotnet restore
       
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build -c Release --no-restore
       
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-restore --verbosity normal
+      
+    - name: Publish
+      run: dotnet publish -c Release --no-restore -o ./publish/LambdaHelloWorld
+      
+    - name: Archive project
+      run: zip -j ./publish/LambdaHelloWorld.zip ./publish/LambdaHelloWorld/*
+
+    - uses: ncipollo/release-action@v1
+      with:
+        artifacts: ./publish/LambdaHelloWorld.zip
+        draft: true
+        token: ${{ secrets.YOUR_GITHUB_TOKEN }}
